feat(index):og:image updatge

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Glass Effect</title>
+    <meta name="description" content="CSS Glass Effect with backdrop-filter. Adjust opacity, blur, border, shadow, and highlight.">
+    <meta property="og:title" content="CSS Glass Effect">
+    <meta property="og:description" content="CSS Glass Effect with backdrop-filter. Adjust opacity, blur, border, shadow, and highlight.">
+    <meta property="og:image" content="assets/images/ogp.jpg">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/script.js" defer></script>
 </head>
